{{$NEXT}}
- Fix an issue with serialisation of nan, inf, and -inf (thanks jjatria)
- strict_arrays is now strict (strict_arrays still accepted for compatibility)
- strict mode now disallows trailing commas
- bugfix: table names whose individual segments include a dot can no longer
  cause parser to incorrectly identify duplicate table names
- bugfix: correctly fail on arrays without separators
- bugfix: correctly fail when array ends without closing at EOF
- bugfix: correctly fail when inline table is missing separators or has
  trailing separator
- bugfix: disallow non-permitted control characters in strings and comments
- bugfix: disallow invalid unicode in input
- bugfix: allow double-zero exponents (e00)
- bugfix: correctly parse multi-line literal strings, dealing properly with
  some edge cases
- bugfix: correctly parse multi-line basic strings, dealing properly with some
  edge cases
- bugfix: correctly escape unicode control characters in toml output
- bugfix: correctly handle comment-like sequences in multiline strings
- bugfix: correctly handle keys with names that are toml keywords
- bugfix: better handling of inf/nan in parsing, writing
- bugfix: correctly generate empty inline tables within arrays

0.13 2021-07-26
-Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)

0.12 2021-05-28
-Fix bug causing to_toml to incorrectly dereference \1 and \0 (thanks oschwald)

0.11 2021-02-12
-Fix bug in strict_arrays where string containing integer is recognized as an
 integer, causing parsing to fail when present in an array containing other
 strings

0.10 2020-09-08
-Remove dependency on DateTime::Format::RFC3339

0.09 2020-08-11
-Fix warning when calling `to_toml(from_toml(...))`
-Fix bug allowing perl to stringify numbers (thanks oschwald)
-Fix bug disallowing weird forms of nan (+nan, -nan)
-Behavior change: return Math::Big(Int|Float) for large numbers (thanks oschwald)

0.08 2020-06-25