@@ -1,5 +1,7 @@
 {{$NEXT}}
 - Fix an issue with serialisation of nan, inf, and -inf (thanks jjatria)
+- Enforcement of homogenous arrays is no longer supported as it has been
+  dropped from the TOML spec
 - strict_arrays is now strict (strict_arrays still accepted for compatibility)
 - strict mode now disallows trailing commas
 - bugfix: table names whose individual segments include a dot can no longer
@@ -20,6 +22,7 @@
 - bugfix: correctly handle keys with names that are toml keywords
 - bugfix: better handling of inf/nan in parsing, writing
 - bugfix: correctly generate empty inline tables within arrays
+- bugfix: make duplicate key enforcement match the toml 1.0 spec
 
 0.13 2021-07-26
 -Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)
